src-tauri/check_err_3.txt
    Checking launcherg v0.0.0 (E:\Launcherg-Mod\src-tauri)
error[E0425]: cannot find value `text_wide` in this scope
   --> src\infrastructure\windowsimpl\scaling\toolbar.rs:186:40
    |
186 |                     .CreateTextLayout(&text_wide, self.text_format.as_ref().unwrap(), 300.0, 30.0)
    |                                        ^^^^^^^^^ not found in this scope

warning: unused import: `windows::core::PCWSTR`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:2:5
  |
2 | use windows::core::PCWSTR;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `BOOL`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:3:34
  |
3 | use windows::Win32::Foundation::{BOOL, HWND, POINT, RECT};
  |                                  ^^^^

warning: unused imports: `INPUT_MOUSE`, `INPUT`, `MOUSEEVENTF_ABSOLUTE`, `MOUSEEVENTF_MOVE`, and `SendInput`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:5:5
  |
5 |     SendInput, INPUT, INPUT_MOUSE, MOUSEEVENTF_ABSOLUTE, MOUSEEVENTF_MOVE,
  |     ^^^^^^^^^  ^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused imports: `IDC_ARROW` and `LoadCursorW`
 --> src\infrastructure\windowsimpl\scaling\cursor.rs:8:47
  |
8 |     ClipCursor, GetCursorPos, GetWindowLongW, LoadCursorW, SetCursorPos, SetWindowLongW,
  |                                               ^^^^^^^^^^^
9 |     ShowCursor, GWL_EXSTYLE, IDC_ARROW, WS_EX_TRANSPARENT,
  |                              ^^^^^^^^^

warning: unused import: `DXGI_ALPHA_MODE_PREMULTIPLIED`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:23:29
   |
23 |     DXGI_ALPHA_MODE_IGNORE, DXGI_ALPHA_MODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM,
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `D2D1_ANTIALIAS_MODE_PER_PRIMITIVE`, `D2D1_BRUSH_PROPERTIES`, `D2D1_ROUNDED_RECT`, and `D2D1_TEXT_ANTIALIAS_MODE_DEFAULT`
  --> src\infrastructure\windowsimpl\scaling\toolbar.rs:9:5
   |
9  |     D2D1_ANTIALIAS_MODE_PER_PRIMITIVE,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |     D2D1_BRUSH_PROPERTIES,
   |     ^^^^^^^^^^^^^^^^^^^^^
...
19 |     D2D1_ROUNDED_RECT,
   |     ^^^^^^^^^^^^^^^^^
20 |     D2D1_TEXT_ANTIALIAS_MODE_DEFAULT,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `DWRITE_MEASURING_MODE_NATURAL`
  --> src\infrastructure\windowsimpl\scaling\toolbar.rs:25:5
   |
25 |     DWRITE_MEASURING_MODE_NATURAL, DWRITE_PARAGRAPH_ALIGNMENT_CENTER, DWRITE_TEXT_ALIGNMENT_CENTER,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `windows::core::Interface`
 --> src\infrastructure\windowsimpl\scaling\toolbar.rs:2:5
  |
2 | use windows::core::Interface;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\infrastructure\windowsimpl\scaling\processor.rs:223:21
    |
223 |                 let mut cursor_manager = crate::infrastructure::windowsimpl::scaling::cursor::CursorManager::new(overlay_window);
    |                     ----^^^^^^^^^^^^^^
    |                     |
    |                     help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> src\infrastructure\windowsimpl\scaling\processor.rs:346:21
    |
346 | ...   Ok((mut window_manager, device, context, swap_chain, compute_shader, const_buffer, output_texture, output_uav, mut toolbar, mut cur...
    |           ----^^^^^^^^^^^^^^
    |           |
    |           help: remove this `mut`

For more information about this error, try `rustc --explain E0425`.
warning: `launcherg` (bin "launcherg") generated 10 warnings
error: could not compile `launcherg` (bin "launcherg") due to 1 previous error; 10 warnings emitted
